creando header y vinculandolo con secciones nuevas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     </head>
     <body>
         <header>
-
+            <nav class="header navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">DuaLipa</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse nav justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="./index.html">Inicio</a>
+                            <a class="nav-link" href="./html/biografia.html">Biografia</a>
+                            <a class="nav-link" href="./html/album.html">Album</a>
+                            <a class="nav-link" href="./html/videos.html">Videos</a>
+                            <a class="nav-link" href="./html/noticias.html">Noticias</a>
+                        </div>
+                    </div>
+                </div>
+              </nav>
         </header>
 
 
