--- a/html/album.html
+++ b/html/album.html
@@ -1,1 +1,65 @@
-<h1>albums</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Dua Lipa</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel='stylesheet' type='text/css' media='screen' href='../css/estilos.css'>
+    </head>
+    <body>
+        <header>
+            <nav class="header navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html">DuaLipa</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse nav justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../html/biografia.html">Biografia</a>
+                            <a class="nav-link" href="../html/album.html">Album</a>
+                            <a class="nav-link" href="../html/videos.html">Videos</a>
+                            <a class="nav-link" href="../html/noticias.html">Noticias</a>
+                        </div>
+                    </div>
+                </div>
+              </nav>
+        </header>
+
+        <main>
+            <h1>album</h1>
+        </main>
+
+        <aside>
+
+        </aside>
+
+
+
+        <footer class=" footer container-fluid text-center">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                    <a href="http:#">
+                        <img src="../imagenes/instagram.jpg" alt="instagram">
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                    <a href="http:#">
+                        <img src="../imagenes/spotify.png" alt="spotify">
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                    <a href="http:#">
+                        <img src="../imagenes/youtube.jpg" alt="youtube">
+                    </a>
+                </div>
+            </div>
+
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    </body>
+</html>
