--- a/index.html
+++ b/index.html
@@ -29,13 +29,9 @@
               </nav>
         </header>
 
-
-
         <main>
-
+            <h1>inicio</h1>
         </main>
-
-
 
         <aside>
 
@@ -43,17 +39,26 @@
 
 
 
-        <footer>
+        <footer class=" footer container-fluid text-center">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                    <a href="http:#">
+                        <img src="./imagenes/instagram.jpg" alt="instagram">
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                    <a href="http:#">
+                        <img src="./imagenes/spotify.png" alt="spotify">
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                    <a href="http:#">
+                        <img src="./imagenes/youtube.jpg" alt="youtube">
+                    </a>
+                </div>
+            </div>
 
         </footer>
-
-
-
-        <h1>Hello, world!</h1>
-        
-
-
-
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
