--- a/html/biografia.html
+++ b/html/biografia.html
@@ -33,13 +33,7 @@
             <h1>biografia</h1>
         </main>
 
-        <aside>
-
-        </aside>
-
-
-
-        <footer class=" footer container-fluid text-center">
+        <aside class="aside container-fluid text-center">
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-lg-4 ">
                     <a href="http:#">
@@ -58,6 +52,12 @@
                 </div>
             </div>
 
+        </aside>
+
+        <footer class="footer container-fluid text-center">
+            <div class="row">
+                <p>Primera practica bootstrap</p>
+            </div>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
