seccion de album con cards

--- a/html/album.html
+++ b/html/album.html
@@ -29,23 +29,61 @@
               </nav>
         </header>
 
-        <main>
-            <h1>album</h1>
+        <main class="container mainAlbum">
+            <div class="row">
+                <div class="col titulo text-center">
+                    <h1>
+                        ALBUMS
+                    </h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 margen">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagenes/album-2017.jpg" class="card-img-top" alt="dua lipa 2017">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">DUA LIPA</h5>
+                            <p class="card-text">Lanzamiento: 2 de junio de 2017</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Discográfica: Warner Bros. Records</li>
+                            <li class="list-group-item">Formatos: CD, descarga digital y vinilo</li>
+                            <li class="list-group-item">Calificación de AllMusic: 4/5 estrellas17​</li>
+                        </ul>
+                    </div>   
+                </div>
+                <div class="col-md-6 margen">    
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imagenes/album-2020.jpg" class="card-img-top" alt="dua lipa 2020">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">FUTURE NOSTALGIA VINILO</h5>
+                            <p class="card-text">Lanzamiento: 27 de marzo de 2020</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Discográfica: Warner Records</li>
+                            <li class="list-group-item">Formatos: CD, descarga digital, vinilo y casete</li>
+                            <li class="list-group-item">Calificación de AllMusic: 4.5/5 estrellas29​</li>
+                        </ul>
+                    </div>                     
+                </div>
+                
+            </div>
         </main>
+
 
         <aside class="aside container-fluid text-center">
             <div class="row">
-                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                <div class="col-xs-12 col-sm-4 col-lg-4 ">
                     <a href="http:#">
                         <img src="../imagenes/instagram.jpg" alt="instagram">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="col-xs-12 col-sm-4 col-lg-4 ">
                     <a href="http:#">
                         <img src="../imagenes/spotify.png" alt="spotify">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                <div class="col-xs-12 col-sm-4 col-lg-4 ">
                     <a href="http:#">
                         <img src="../imagenes/youtube.jpg" alt="youtube">
                     </a>
