seccion de album aplicamos cards

--- a/html/album.html
+++ b/html/album.html
@@ -46,7 +46,7 @@
                             <p class="card-text">Lanzamiento: 2 de junio de 2017</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Discográfica: Warner Bros. Records</li>
+                            <li class="list-group-item">Discográfica: Warner Bros. Records.</li>
                             <li class="list-group-item">Formatos: CD, descarga digital y vinilo</li>
                             <li class="list-group-item">Calificación de AllMusic: 4/5 estrellas17​</li>
                         </ul>
@@ -60,7 +60,7 @@
                             <p class="card-text">Lanzamiento: 27 de marzo de 2020</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Discográfica: Warner Records</li>
+                            <li class="list-group-item">Discográfica: Warner Records.</li>
                             <li class="list-group-item">Formatos: CD, descarga digital, vinilo y casete</li>
                             <li class="list-group-item">Calificación de AllMusic: 4.5/5 estrellas29​</li>
                         </ul>
