--- a/html/biografia.html
+++ b/html/biografia.html
@@ -29,8 +29,92 @@
               </nav>
         </header>
 
-        <main>
-            <h1>biografia</h1>
+        <main class="container mainBiografia">
+            <div class="row">
+                <div class="col titulo text-center">
+                    <h1>
+                        BIOGRAFIA
+                    </h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>¿Quién es Dua Lipa?</h2>
+                    <p>
+                        Dua Lipa es una cantante y compositora de pop inglesa, considerada como una de 
+                        las nuevas artistas más exitosas de la música. Comenzó a ganar reconocimiento 
+                        en 2017 con el lanzamiento de su álbum epónimo, por el que ganó premios como 
+                        el BRIT Award. Con tan solo dos álbumes en su repertorio, Dua Lipa ha recibido 
+                        otras acoladas como dos premios Grammy y dos MTV Europe Music Awards.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h2>¿De dónde es Dua Lipa?</h2>
+                    <p>
+                        Dua Lipa nació en Londres, Inglaterra, pero proviene de una familia de origen 
+                        albanés. Sus padres son originarios de Kosovo, y gracias a su abuela materna 
+                        tiene ascendencia bosnia. Lipa asistió a la escuela en Londres hasta 2006, 
+                        cuando la familia se mudó a Pristina, Kosovo por una oferta de trabajo de 
+                        su padre.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h2>¿Cuántos años tiene Dua Lipa?</h2>
+                    <p>
+                        Dua Lipa nació el 22 de agosto de 1995. Es hija de Dukagjin Lipa, un reconocido 
+                        especialista en mercadotecnia y vocalista de la banda kosovar Ojda, su madre es 
+                        Anesa Rexha trabaja en turismo. La cantante tiene dos hermanos menores, Rina 
+                        y Gjin Lipa.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>¿Cómo es el estilo de Dua Lipa?</h2>
+                    <p>
+                        El estilo de Dua Lipa está definido por la exploración, por su habilidad 
+                        para revivir tendencias  y el recibimiento que ha tenido de los diseñadores 
+                        para construir su imagen. Esta cantante ha introducido a las generaciones 
+                        más jóvenes en cómo llevar clásicos como los trajes de Chanel y los 
+                        pantalones sastre, ha dado lecciones de cómo se usan las piezas de 
+                        archivo y hecho de los diseñadores emergentes sus aliados. Sin apegarse 
+                        a una estética específica, Dua Lipa navega entre statement pieces que 
+                        van desde bucket hats y chalecos con notas de los 90, vestidos de glitter 
+                        o lentejuelas y elegantes vestidos de noche.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h2>¿Cómo se hizo famosa Dua Lipa?</h2>
+                    <p>
+                        Dua Lipa comenzó su carrera a los 14 años, subiendo videos de sus covers 
+                        de canciones a YouTube. Mientras trabajaba en un bar como mesera en Londres, 
+                        fue ofrecida un contrato para comenzar a grabar su música, hasta que en 2015 
+                        firmó un contrato definitivo con Warner Music Group para la producción de su 
+                        primer disco. Sus primeros singles, New Love y Be the One, alcanzaron los 
+                        primeros lugares en Europa al momento de su lanzamiento en 2015, mientras 
+                        que su primer álbum epónimo, fue lanzado en marzo de 2017. Dua Lipa empezó 
+                        a presentarse en escenarios como el de los SCTV Awards y Glastonbury, y 
+                        fue nominada a los BRIT Awards en dos categorías, ganando ambas. 
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h2>¿Qué hace Dua Lipa además de ser cantante?</h2>
+                    <p>
+                        Antes de comenzar su carrera en la música, Dua Lipa tuvo trabajos 
+                        como modelo, logrando estar en campañas para la tienda online ASOS. 
+                        Tras el despegue de su carrera, la cantante ha sido imagen de marcas 
+                        como Saint Laurent y Pepe Jeans. Junto con su padre, Dua Lipa fundó 
+                        en 2016 la Sunny Hill Foundation, una organización dedicada a recaudar 
+                        fondos para personas con dificultades económicas en Kosovo. Ha sido 
+                        parte de campañas de UNICEF en pro de los derechos de los niños, y 
+                        se unió a la organización para visitar un campo de refugiados en 
+                        Beirut, Líbano. En 2020 la cantante participó en el concierto digital 
+                        Dream with Us, una iniciativa destinada a recaudar 
+                        fondos para afectados por el COVID-19. 
+                    </p>
+                </div>
+            </div>
+          
         </main>
 
         <aside class="aside container-fluid text-center">
