seccion videos. videos provisoros del de dua estan protegidos

--- a/html/videos.html
+++ b/html/videos.html
@@ -29,9 +29,48 @@
               </nav>
         </header>
 
-        <main>
-            <h1>videos</h1>
+        <main class="container mainVideos">
+            <div class="row">
+                <div class="col titulo text-center">
+                    <h1>
+                        Videos
+                    </h1>
+                    <p>Los videos de Dua Lipa se encuentran protegidos</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col ratio ratio-16x9 ">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Jg8NqkTMPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Jg8NqkTMPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Jg8NqkTMPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col ratio ratio-16x9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+            </div>                      
         </main>
+
+
 
         <aside class="aside container-fluid text-center">
             <div class="row">
