--- a/html/album.html
+++ b/html/album.html
@@ -8,7 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel='stylesheet' type='text/css' media='screen' href='../css/estilos.css'>
     </head>
-    <body>
+
+    <body class="container-fluid">
         <header>
             <nav class="header navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -38,8 +39,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 margen">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-sm-6 col-md-4 margen">
+                    <div class="card" style="width: 100%;">
                         <img src="../imagenes/album-2017.jpg" class="card-img-top" alt="dua lipa 2017">
                         <div class="card-body">
                             <h5 class="card-title text-center">DUA LIPA</h5>
@@ -52,8 +53,8 @@
                         </ul>
                     </div>   
                 </div>
-                <div class="col-md-6 margen">    
-                    <div class="card" style="width: 18rem;">
+                <div class="col-sm-6 col-md-4 margen">    
+                    <div class="card" style="width: 100%;">
                         <img src="../imagenes/album-2020.jpg" class="card-img-top" alt="dua lipa 2020">
                         <div class="card-body">
                             <h5 class="card-title text-center">FUTURE NOSTALGIA VINILO</h5>
@@ -66,35 +67,48 @@
                         </ul>
                     </div>                     
                 </div>
+                <div class="col-sm-6 col-md-4 margen">    
+                    <div class="card" style="width: 100%;">
+                        <img src="../imagenes/album-colaboraciones.jpg" class="card-img-top" alt="dua lipa 2020">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">COLABORACIONES</h5>
+                            <p class="card-text">Lanzamiento: VARIOS</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Discográfica: Warner Records.</li>
+                            <li class="list-group-item">Formatos: CD, descarga digital, vinilo y casete</li>
+                            <li class="list-group-item">Calificación de AllMusic: 4.2/5 estrellas19​</li>
+                        </ul>
+                    </div>                     
+                </div>
                 
             </div>
         </main>
 
 
-        <aside class="aside container-fluid text-center">
+        <aside class="aside container text-center">
             <div class="row">
-                <div class="col-xs-12 col-sm-4 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/instagram.jpg" alt="instagram">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/spotify.png" alt="spotify">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/youtube.jpg" alt="youtube">
                     </a>
                 </div>
             </div>
-
         </aside>
 
         <footer class="footer container-fluid text-center">
             <div class="row">
-                <p>Primera practica bootstrap</p>
+                <p>M.Rod © 2021 Todos los derechos reservados. </p>
             </div>
         </footer>
 
