--- a/html/biografia.html
+++ b/html/biografia.html
@@ -8,7 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel='stylesheet' type='text/css' media='screen' href='../css/estilos.css'>
     </head>
-    <body>
+
+    <body class="container-fluid">
         <header>
             <nav class="header navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -117,30 +118,29 @@
           
         </main>
 
-        <aside class="aside container-fluid text-center">
+        <aside class="aside container text-center">
             <div class="row">
-                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/instagram.jpg" alt="instagram">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/spotify.png" alt="spotify">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/youtube.jpg" alt="youtube">
                     </a>
                 </div>
             </div>
-
         </aside>
 
         <footer class="footer container-fluid text-center">
             <div class="row">
-                <p>Primera practica bootstrap</p>
+                <p>M.Rod © 2021 Todos los derechos reservados. </p>
             </div>
         </footer>
 
