--- a/html/videos.html
+++ b/html/videos.html
@@ -8,7 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel='stylesheet' type='text/css' media='screen' href='../css/estilos.css'>
     </head>
-    <body>
+
+    <body class="container-fluid">
         <header>
             <nav class="header navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -35,27 +36,10 @@
                     <h1>
                         Videos
                     </h1>
-                    <p>Los videos de Dua Lipa se encuentran protegidos</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col ratio ratio-16x9 ">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="col ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Jg8NqkTMPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="col ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Jg8NqkTMPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/XvJ4eNcwPDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col ratio ratio-16x9">
@@ -72,30 +56,29 @@
 
 
 
-        <aside class="aside container-fluid text-center">
+        <aside class="aside container text-center">
             <div class="row">
-                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/instagram.jpg" alt="instagram">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/spotify.png" alt="spotify">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-3 col-lg-4 ">
+                <div class="col">
                     <a href="http:#">
                         <img src="../imagenes/youtube.jpg" alt="youtube">
                     </a>
                 </div>
             </div>
-
         </aside>
 
         <footer class="footer container-fluid text-center">
             <div class="row">
-                <p>Primera practica bootstrap</p>
+                <p>M.Rod © 2021 Todos los derechos reservados. </p>
             </div>
         </footer>
 
