container de seccion inicio modficado

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </nav>
         </header>
 
-        <main class="mainInicio container-fluid">
+        <main class="mainInicio container">
             <div class="row">
                 <div class="col titulo text-center">
                     <h1>
